--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
+element.style {
+  height: 100%;
+}
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
-
+#root{
+    display: flex;
+    vertical-align: middle;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#clock{
+  flex-direction: column;
+  /* align-items: center; */
+  /* width: 90vw; */
+  vertical-align: middle;
+  max-height: 70vh;
+}
+#localTime{
+  width: 40vw;
+  text-align: center;
+  align-items: center;
+}
+#titleTime{
+  display: block;
+    font-size: 1.1em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.4em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+#stringTime{
+  margin-top: 0px;
+}
+@media (min-width: 560px) {
+  #clock{
+    display: flex;
+    flex-wrap: wrap;
+    column-count: 2;
+    justify-content: space-around;
+    align-items: center;
+    width: 90vw;
+} 
+#localTime{
+  width: 35vw;
+  text-align: center;
+  align-items: center;
+}
+#titleTime{
+  display: block;
+    font-size: 1.0em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.4em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
 }
