--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,9 @@ code {
     monospace;
 }
 #clock{
-  flex-direction: column;
-  /* align-items: center; */
-  /* width: 90vw; */
+  flex-wrap: wrap;
+  column-count: 2;
+  width: 90vw; 
   vertical-align: middle;
   max-height: 70vh;
 }
